# minamidera

./: Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: build.yml
minamidera/: __init__.py  dynamics.py  library.py  pitches.py  soundpointsgenerators.py  statemapper.py  states.py  statetransition.py
minamidera/builds/score/: front-cover.tex  music.ly  preface.tex  score.tex
minamidera/builds/score/_sections/: a.ily  b.ily  c.ily  d.ily
minamidera/segments/a/: __metadata__.json  music.ily  music.py
minamidera/segments/b/: __metadata__.json  music.ily  music.py
minamidera/segments/c/: __metadata__.json  music.ily  music.py
minamidera/segments/d/: __metadata__.json  music.ily  music.py
minamidera/stylesheets/: stylesheet.ily
tests/: test_dynamics.py  test_library.py  test_soundpointgenerators.py  test_statemapper.py  test_states.py  test_statetransition.py
